# multiple_agent_planner

./: CMakeLists.txt  README.md  bgp_plugin.xml  example_planner_plugin.xml  package.xml
cfg/: amcl_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.yaml  multi_robot.rviz  spawn.rviz
detached_planner/: CMakeLists.txt  LICENSE  README.md  package.xml
detached_planner/cfg/: GlobalPlanner.cfg
detached_planner/src/: astar.cpp  (+4 more)
launch/: robot_diff_drive_in_stage.launch  robot_diff_drive_in_stage_1.launch  robot_diff_drive_in_stage_old.launch  select_spawn_points.launch
multi_robot_sim/: CMakeLists.txt  README.md  package.xml
multi_robot_sim/cfg/: move_base.yaml  multi_robot.rviz  multi_robot_old.rviz  top_view.rviz
multi_robot_sim/launch/: robot_diff_drive_in_stage.launch  select_spawn_points.launch  send_goals.launch
multi_robot_sim/maps/: simple_rooms.yaml
multi_robot_sim/scripts/: goal_selector.py  robot_sim.py  sim_start.py
multi_robot_sim/scripts/src/: begin_launch.txt  begin_stage.txt  end_launch.txt  end_rviz.txt  robot.txt  robot_one_launch.txt
multi_robot_sim/stage/: maze_clear.world  maze_diff_drive.world
scripts/: .final_launch.launch.swp  .robot_sim.py.swp  deps.txt  final_launch.launch  final_stage.world  maze_diff_drive.world  multi_robot.rviz  robot_sim.py  sim_start.py
src/: example_planner.cpp  example_planner.h  gradient_path.cpp  orientation_filter.cpp  planner_core.cpp  quadratic_calculator.cpp
stage/: maze_diff_drive.world  maze_diff_drive_1.world  maze_diff_drive_old.world
(+20 files in other folders)
