<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>multi_robot_sim</name>
  <version>1.1.1</version>
  <description>
  Package that allows multi robot simulation in stage
  </description>
  <maintainer email="alexkaravaev@protonmail.com">Alex Karavaev</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>


</package>
